[package]
name = "mimc-fast"
version = "0.1.0"
authors = ["Jacob Rosenthal <jacobrosenthal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rocket = "0.4.7"
rocket_contrib = "0.4.7"
rocket_cors = "0.5.2"
rayon = "1.5.0"
itertools = "0.10.0"
darkforest = { version = "0.1.0", path = "../darkforest" }
http-types = "2.11.1"
serde = { version = "1.0.125", features = ["derive"] }
